--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,127 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#16A085;">
-    <a class="navbar-brand" href="#">MY-STORE</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Product <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Check out</a>
-        </li>
-
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li> -->
-      </ul>
-      <!-- <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form> -->
-    </div>
-  </nav>
-  <div class="container wrapper">
-    <input class="form-control form-control-lg" type="text" placeholder="Search">
-    <div class="row wrapper">
-      <div class="col-4">
-        <div class="card">
-          <img src="https://www.newbridgesilverware.com/Images/Models/Full/5042.Jpg" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">Pen</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-          <div class="card">
-            <img
-              src="http://cdn.shopify.com/s/files/1/0025/9040/8764/products/fmof-Osco-Round-Pen-Pot-1_800x.jpg?v=1563550622"
-              class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Pen pot</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-      <div class="col-4">
-          <div class="card">
-            <img
-              src="http://cdn.shopify.com/s/files/1/0025/9040/8764/products/fmof-Osco-Round-Pen-Pot-1_800x.jpg?v=1563550622"
-              class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Pen pot</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-      <div class="col-4">
-        <div class="card">
-          <img
-            src="http://cdn.shopify.com/s/files/1/0025/9040/8764/products/fmof-Osco-Round-Pen-Pot-1_800x.jpg?v=1563550622"
-            class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Pen pot</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-          <div class="card">
-            <img
-              src="http://cdn.shopify.com/s/files/1/0025/9040/8764/products/fmof-Osco-Round-Pen-Pot-1_800x.jpg?v=1563550622"
-              class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Pen pot</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-
-
-      <div class="col-4">
-        <div class="card">
-          <img src="https://www.sicilianteacompany.com/wp-content/uploads/2016/07/370-RED.jpg" class="card-img-top"
-            alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Tea cup</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-
-        </div>
-      </div>
-     
-        
-     
-    </div>
+<app-header></app-header>
+<div class="container wrapper">
+  <app-search></app-search>
+  <div class="row wrapper">
+    <app-product class="col-4"></app-product>
+    <app-product class="col-4"></app-product>
+    <app-product class="col-4"></app-product>
+    <app-product class="col-4"></app-product>
+    <app-product class="col-4"></app-product>
+    <app-product class="col-4"></app-product>
   </div>
-  <div class="card-footer wrapper" width="100%" height="40px" style="background-color: #16A085"> ©Copyright</div>
-</body>
+</div>
+  <app-footer></app-footer>
 
-</html>
