--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#16A085;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#2980B9;">
     <img src="assets/image/logo.png" id="logo">
     <a class="navbar-brand" href="#"> MY-STORE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
