--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,2 @@
-<input class="form-control form-control-lg" type="text" placeholder="Search">
+<input class="form-control form-control-lg space" type="text" [(ngModel)]="search" placeholder="Search">
+<p>{{search}}</p>
