--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,2 +1,2 @@
-<footer class="card-footer mt-4" style="background-color:#2980B9;"> &copy;
+<footer class="card-footer mt-4 fixed-bottom" style="background-color:#2980B9;"> &copy;
 </footer>
